# aresampler

./: Cargo.toml  README.md
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: release.yml
crates/aresampler-cli/: Cargo.toml
crates/aresampler-cli/src/: main.rs
crates/aresampler-core/: Cargo.toml  LICENSE  README.md
crates/aresampler-core/src/: capture.rs  error.rs  lib.rs  process.rs  ring_buffer.rs  session.rs  types.rs
crates/aresampler-core/src/platform/macos/: audio.rs  capture.rs  icon.rs  input_device.rs  mod.rs  permission.rs  resampler.rs  session.rs
crates/aresampler-core/src/platform/windows/: capture.rs  input_device.rs  mod.rs  session.rs
crates/aresampler-ui/: Cargo.toml
crates/aresampler-ui/src/: app.rs  config.rs  main.rs  playback.rs  source_selection.rs  theme.rs  waveform.rs  waveform_display.rs
src/: app.rs  assets.rs  main.rs  playback.rs  source_selection.rs  waveform.rs
src/app/: colors.rs  header.rs  lifecycle.rs  output.rs  playback.rs  recording.rs  sources.rs  waveform.rs
src/core/: mod.rs  process.rs  ring_buffer.rs  types.rs
src/core/platform/: mod.rs
src/core/platform/macos/: capture.rs  input_device.rs  mod.rs  permission.rs  resampler.rs  session.rs
src/core/platform/windows/: audio.rs  capture.rs  icon.rs  input_device.rs  session.rs
