[package]
name = "aresampler-core"
version = "0.2.0"
edition = "2021"
description = "Cross-platform process audio capture library"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
hound = "3.5"
sysinfo = "0.31"
thiserror = "1.0"

# Windows-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
wasapi = "0.21"

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = "0.3"
core-media-rs = "0.3"
