[package]
name = "aresampler-core"
version = "0.2.0"
edition = "2021"
description = "Cross-platform process audio capture library"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
hound = "3.5"
sysinfo = "0.31"
thiserror = "1.0"

# Windows-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
wasapi = "0.21"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }
image = { version = "0.25", default-features = false, features = ["png"] }

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = "0.3"
core-media-rs = "0.3"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSData", "NSString", "NSURL", "NSDictionary"] }
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSImage", "NSBitmapImageRep", "NSGraphicsContext"] }
