[package]
name = "aresampler"
version = "0.2.4"
edition = "2024"

[[bin]]
name = "aresampler"
path = "src/main.rs"

[dependencies]
aresampler-core = { path = "../aresampler-core" }
anyhow = "1.0"
gpui = { git = "https://github.com/zed-industries/zed" }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
hound = "3.5"
image = "0.25"
rodio = "0.19"
