[package]
name = "aresampler"
version = "0.2.4"
edition = "2024"

[[bin]]
name = "aresampler"
path = "src/main.rs"

[dependencies]
aresampler-core = { path = "../aresampler-core" }
anyhow = "1.0"
gpui = { git = "https://github.com/zed-industries/zed" }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
dirs = "5.0"
hound = "3.5"
image = "0.25"
rodio = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-embed = "8.5"
